--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <div class="heart-seal" id="heartSeal">
                         <i class="fas fa-heart"></i>
                     </div>
+                    <img src="asset/img/fond.png" alt="img" class="img-bg" style="z-index: 3; opacity: .5;">
                 </div>
                 
                 <div class="letter" id="letter">
